# utils/schemas/user.schema.ts
@@ -1,0 +1,9 @@
+import { z } from 'zod'
+
+export const formEditUser = z.object({
+    firstName: z.string(),
+    lastName: z.string(),
+    dateOfBirth: z.date({
+        required_error: 'La date de naissance est requise',
+    }),
+})
